<resources>
    <string name="app_name">Угадай число!</string>
    <string name="behind">Недолет!</string>
    <string name="ahead">Перелет!</string>
    <string name="hit">В точку!</string>
    <string name="input_value">Ввести значение</string>
    <string name="play">Начать</string>
    <string name="try_to_guess">Попробуйте угадать число (1 – 100)</string>
    <string name="error">Неверный ввод!</string>
    <string name="complication">Выберите сложность</string>

    <string name="easy">Легко \n (100 попыток)</string>
    <string name="normal">Нормально \n (8 попыток)</string>
    <string name="hard">Сложно \n (4 попытки)</string>
</resources>
